--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -83,9 +83,10 @@
 @media (max-width: 480px) {
     
     .bg{
-        right: -15vw;
-        height: 100vh;
-        width: 100%;
+        right: -0vw;
+        top: 50px;
+        height: 65vh;
+        width: 100vw;
     }
 
     .introContent{
