--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -45,6 +45,7 @@
     margin: 3rem 0;
     padding: 0.5rem 2.5rem;
     background-color: white;
+    color: black;
     border: none;
     cursor: pointer;
     font-size: 1rem;
