--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 #contactpage{
-    min-height: calc(100vh-3rem);
+    min-height: calc(100vh-5rem);
     width: 100%;
     max-width: 60rem;
     margin: 0 auto;
@@ -8,6 +8,7 @@
 
 .contactPageTitle{
     font-size: 2.5rem;
+    margin-top: 40px;
 }
 
 .contactDesc{
