--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -37,8 +37,9 @@
 
 .worksImg{
     object-fit: cover;
-    height: 20rem;
-    margin: 0.5rem;
+    height: 25rem;
+    margin: 0.75rem;
+    margin-top: 0.75rem;
 }
 
 .workBtn{
@@ -60,14 +61,47 @@
     transition: .5s;
 }
 
+.projectButtons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
+.projectBtn {
+    margin: 15px 10px;
+    padding: 15px 13px;
+    background-color: #fff; /* Bootstrap primary color */
+    color: black;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+.projectBtn:hover {
+    background-color: transparent; 
+    color: white;
+    border: 2px solid white;
+    transition: .5s;
+}
+
 @media (max-width: 585px) {
     .worksImg{
-        height: 48vw;
+        height: 45vw;
+        width: fit-content;
     }
 
     .worksDesc{
         font-size: 1rem;
         width: 100%;
         max-width: 80rem;
+    }
+
+    .projectButtons{
+        flex-direction: column;
+        font-size: 1rem;
+        /* padding: 5px 10px; */
+    }
+    .projectBtn{
+        margin: 5px 0;
+        padding: 10px 20px;
     }
 }
